# CryptDough

./: .gitignore  CMakeLists.txt  README.md  agents.md
.github/workflows/: doxygen.yml
bench/: README.md
bench/Pytorch/: test_weight_loading.cpp
bench/micro/: README.md  micro_aggregation.cpp  micro_batching.cpp  micro_boolean_addition.cpp  micro_ccs_radix.cpp  micro_comm_batch.cpp  micro_comm_threads.cpp  micro_dpf.cpp  micro_join.cpp  micro_memory.cpp  micro_merge.cpp  micro_ml.cpp  micro_ml_local.cpp  micro_ml_secure.cpp  micro_multi_engine.cpp  micro_oprf.cpp  micro_permutations.cpp  micro_pooled.cpp  micro_prefix_sum.cpp  micro_primitives.cpp  micro_randomness.cpp  micro_session_gap.cpp  micro_session_threshold.cpp  micro_shprg.cpp  micro_shuffling.cpp  micro_sort_preprocessing.cpp  micro_sorting.cpp  micro_sorting_rs.cpp  micro_tablesort.cpp  micro_triples.cpp  micro_tumbling.cpp  micro_vector_construction.cpp  micro_vector_mapping.cpp  thread_test.cpp
bench/models/: alexnet-me.cpp  alexnet.cpp  main.cpp  mpspdz_alexnet.cpp  test_layer_computation.cpp  test_layer_correctness.cpp  test_secure_vs_plaintext.cpp  test_weight_loading.cpp  vgg16-cifar10-pretrained.cpp  vgg16-imagenet-me.cpp  vgg16-imagenet-pretrained.cpp  vgg16-imagenet.cpp  vgg16-me.cpp  vgg16.cpp
bench/multi-workload/: patients_spo.cpp
bench/queries/other/: aspirin.cpp  comorbidity.cpp  credit_score.cpp  custom_agg.cpp  distinct_patients.cpp  market-share.cpp  pwd-reuse.cpp  rcdiff.cpp  secrecy_dbgen.h  secrecy_q2.cpp
bench/queries/secretflow/: sf-q1-mod-obliv.cpp  sf-q1-mod.cpp  sf-q1.cpp  sf-q12-merge.cpp  sf-q12.cpp  sf-q14-merge.cpp  sf-q14.cpp  sf-q6.cpp
bench/queries/tpch/: q1.cpp  q10.cpp  q11.cpp  q12.cpp  q13.cpp  q14.cpp  q15.cpp  q16.cpp  q17.cpp  q18.cpp  q19.cpp  q2.cpp  q20.cpp  q21.cpp  q22.cpp  q3.cpp  q4.cpp  q5.cpp  q6.cpp  q7.cpp  q8.cpp  q9.cpp  tpch_dbgen.h
bench/tva/: cloud.cpp  energy.cpp  medical.cpp
doc/: Doxyfile  conf.py  generate-docs.sh  index.rst
doc/headers/: backend.rst  communication.rst  containers.rst  debug.rst  examples.rst  math.rst  operators.rst  profiling.rst  protocols.rst  random.rst
examples/: ex0_template.cpp  ex1_secret_sharing.cpp  ex2_operators.cpp  ex3_relational.cpp  ex4_wagegap.cpp  ex5_join.cpp
include/: README.md  cdough.h  constants.h  mpc.h  pch.h
include/backend/: README.md
include/backend/common/: README.md  libote_io.h  rand_setup.h  runtime.h  setting.h  setup.h  task.h  util.h  worker.h
include/backend/nocopy_communicator/: README.md  network_utils.h
include/backend/nocopy_communicator/startmpc/: README.md  startmpc  startmpc.h
include/backend/null_communicator/: README.md  setup.h
include/core/: README.md
include/core/communication/: README.md  communicator.h  communicator_factory.h  mpi_communicator.h  null_communicator.h  ring.h
include/core/communication/no_copy_communicator/: no_copy_communicator.h  no_copy_ring.h  (+1 more)
include/core/containers/: README.md  a_shared_vector.h  b_shared_vector.h  class_access_vector.h  dummy_vector.h  e_vector.h  encoded_vector.h  encoding.h  gf2e_overloads.h  mapped_iterator.h  mapping_access_vector.h  permutation.h  shared_vector.h  vector.h
include/core/math/: README.md  math.h  primes.h  util.h
include/core/operators/: README.md  aggregation.h  aggregation_selector.h  circuits.h  common.h  distinct.h  join.h  machine_learning.h  merge.h  operators.h  prefix_network.h  quicksort.h  radixsort.h  shuffle.h  sorting.h  sorting_network.h  streaming.h
include/core/protocols/: README.md  _4pc_selector.cpp  beaver_2pc.h  custom_4pc.h  dalskov_4pc.h  dummy_0pc.h  eda_bits.h  op_structs.h  plaintext_1pc.h  replicated_3pc.h  spdz2k_npc.h
include/core/random/: README.md  manager.h
include/debug/: README.md  cdough_debug.h
include/profiling/: README.md  memory.h  output.h  stopwatch.h  thread_profiling.h  utils.h
scripts/: README.md  run_experiment.py
scripts/orchestration/: deploy.sh  gcp-cvm.sh
scripts/others/: compare-to.py
scripts/plot/: memory-plot.py  sort.py  table_sort.py
scripts/plot/triples/: plot-triple-comm.py  plot-triple-runtime.py
scripts/profiling/: query-experiments.sh
scripts/profiling/comm/: bw-accuracy.py  cluster-wan-sim.sh  comm-experiments.sh  comm-thread-experiments.sh  wan-sim.py
scripts/profiling/flamegraphs/: flamegraph.sh  primitive-experiments.sh  tablesort.sh  threading-experiments.sh
scripts/setup/: _clone_libote.sh  _setup_blaze.sh  _setup_cryptotools.sh  _setup_libote.sh  _setup_ntl.sh  _setup_required.sh  _setup_securejoin.sh  setup.sh
scripts/testing/: run_everything.sh  run_multithreaded_test.sh  run_tests.sh
scripts/testing/ml/: extract_weights.py  generate_layer_test_data.py
sosp-replication/: README.md
sosp-replication/data/results/: Conv2D_SCALABILITY.csv  GR_SCALABILITY.csv  MP-SPDZ.csv  MULTI_WORKLOAD.csv  ORQ.csv  Pigeon.csv  Piranha.csv  RCA-PPA_SCALABILITY.csv  SORTING_SCALABILITY.csv  TVA.csv  scalability_primitives.csv
sosp-replication/experiments/figure-5/: fig5.sh
sosp-replication/experiments/figure-6/: fig6-cdough.sh  fig6-orq.sh
sosp-replication/experiments/figure-7/: fig7-cdough.sh  fig7-tva.sh
sosp-replication/experiments/figure-8/: fig8.sh
sosp-replication/experiments/table-2/: table2-cdough.sh  table2-pigeon.sh
sosp-replication/experiments/table-3/: table3-cdough.sh
sosp-replication/experiments/table-4/: table4-cdough.sh
sosp-replication/plotting/: plot_benchmarks.py
sosp-replication/setup/: setup_baselines.sh  setup_mpspdz.sh  setup_orq.sh  setup_pigeon.sh  setup_piranha.sh  setup_tva.sh
tasks/: 0000_task-template.md  tasks.md
tests/: test_bitonic_sort.cpp  test_communication.cpp  test_comparisons.cpp  test_computation_library.cpp  test_correlated.cpp  test_count_wrong_div.cpp  test_fixed_point.cpp  test_io.cpp  test_join.cpp  test_libote.cpp  test_malicious.cpp  test_matrix.cpp  test_models.cpp  test_operators.cpp  test_pooled.cpp  test_primitives.cpp  test_randomness.cpp  test_runtime.cpp  test_securejoin.cpp  test_shuffle.cpp  test_sorting.cpp  test_table_operators.cpp  util.h
(+58 files in other folders)
